# chip8emulator

emulator/: CMakeLists.txt  chip8.c  chip8.h  config.h  definitions.h  main.c  miniaudio.h  opcodes.h  utils.c  utils.h
